changed links to login.php

--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -18,7 +18,7 @@
          style="float: left"
          width="100">
     <div id="pageLoader"></div>
-    <a href="../login/login.php?logout">Log Out</a>
+    <a href="../login/?logout">Log Out</a>
     <form enctype="multipart/form-data" autocomplete="off" id="search1">
         <div class="autocomplete" style="float: right">
             <label>
