--- a/login/loginNewAccount.html
+++ b/login/loginNewAccount.html
@@ -51,7 +51,7 @@
         <br><br>
         <input id="btnSignIn" name="btnSignIn" type="submit" value="Registrieren">
     </form>
-    <p>Sie haben schon ein Konto? <a href="login.html">Anmelden</a></p>
+    <p>Sie haben schon ein Konto? <a href="../login/">Anmelden</a></p>
 </div>
 </body>
 <script>
