--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -47,22 +47,81 @@
     </table>
 
 </div>
+<div id="filterDialog"
+     style="display: block; position: absolute; width: 50%; height: 50%; top: 20%; left: 40%; background-color: #333333">
+    <h1 align="center">Kommentarfilter</h1>
+    <h2>Kommentarstatus:</h2>
+    <input checked id="allComments" name="filter" type="radio" value="">
+    <label for="allComments">Alle Kommentare</label>
+    </br>
+    <input id="solvedComments" name="filter" type="radio" value="solved">
+    <label for="solvedComments">Erledigte Kommentare</label>
+    </br>
+    <input id="unsolvedComments" name="filter" type="radio" value="unsolved">
+    <label for="unsolvedComments">Unerledigte Kommentare</label>
+    <h2>Kommentarseite:</h2>
+    <table>
+        <tr>
+            <td>
+                <div>
+                    <input checked id="allPages" name="pageFilter" style="margin-top: 1px;" type="radio"
+                           value="allPages">
+                    <label for="allPages">Alle Seiten</label>
+                </div>
+            </td>
+            <td>
+                <input id="certainPages" name="pageFilter" style="margin-top: 1px;" type="radio" value="allPages">
+                <label for="certainPages">Bestimmte Seiten</label>
+            </td>
+            <td>
+                <input class="textField" id="certainPagesCriteria" pattern="^[0-9][-|,]{0,}" placeholder="1,3,6-8"
+                       style=" margin-top: 0; position: unset; min-width: 100px; width: 10%;" type="text" value="1"/>
+            </td>
+        </tr>
+    </table>
+</div>
 <div class="toolbox" id="changeCommentContainer"
-     style="text-align: left; top: 15%; width: 28%; height: 60%; min-height: 60%; left: 1%;outline-style:none;box-shadow:none;border-color:transparent; padding-right: 15px;">
-    <div id="textCommentContainer" style="height: 98%; width: 99%; overflow-x: hidden; overflow-y: scroll;">
+     style="top: 15%; width: 28%; height: 63%; min-height: 60%; left: 1%;outline-style:none;box-shadow:none;border-color:transparent; padding-right: 15px;">
+    <div id="filterContainer" style="margin-left: 10px;">
+        <table>
+            <tr>
+                <td>
+                    <label for="searchComments"></label>
+                    <input class="textField" id="searchComments" placeholder="Search here."
+                           style="width: 18%; top: 16%;"
+                           type="text"/>
+                </td>
+                <td style="width: 80%"></td>
+                <td>
+                    <button id="filterSettingsBtn"
+                            style="font-size: 15px; height: 100%; white-space: normal; word-wrap: break-word;">
+                        Versionsfilter
+                    </button>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div id="textCommentContainer"
+         style="height: 89%; width: 99%; overflow-x: hidden; overflow-y: scroll; margin-top: 10px;">
         <div id="blueprintTextComment"
              style="position: absolute; display: none; margin: 5px 15px 10px 10px; background-color: dimgrey; grid-template-columns: 90% 10%;">
             <div id="cIContainer" style="margin-left: 10px;">
-                <p>
-                <p id="commentIText">Idk... Just change it. <br> dsadadas s <br> lorem...</p>
-                <br>
-                geschrieben von
-                <a href="mailto:email?subject=Kommentar%20im%20Designvorschlag"
-                   id="commentIAuthor" style="color: white;">email@thingymagics.com</a>
-                </p>
+                <p align="left" id="commentIText" style="">Idk... Just change it. <br> dsadadas s <br> lorem...</p>
+                <table>
+                    <tr>
+                        <td>geschrieben von</td>
+                        <td>
+                            <a href="mailto:email?subject=Kommentar%20im%20Designvorschlag"
+                               id="commentIAuthor" style="color: white;">email@thingymagics.com</a>
+                        </td>
+                        <td>
+                            <p id="commentIVersion" style="margin-left:auto; margin-right:0;">Some Version.</p>
+                        </td>
+                    </tr>
+                </table>
                 <div id="commentIFinder" style="height: 10px; z-index: 3; margin-bottom: 5px;"></div>
             </div>
-            <label style="margin-left: 5px; margin-right: 5px; padding-top: 85%;">
+            <label style="margin-left: 5px; margin-right: 5px; margin-top: 85%;">
                 <input id="commentIImplemented" type="checkbox"/>
             </label>
         </div>
