--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -48,54 +48,60 @@
 
 </div>
 <div id="filterDialog"
-     style="display: block; position: absolute; width: 50%; height: 50%; top: 20%; left: 40%; background-color: #333333">
+     style="display: none; position: absolute; width: 25%; height: 50%; top: 20%; left: 40%; background-color: #919191">
     <h1 align="center">Kommentarfilter</h1>
-    <h2>Kommentarstatus:</h2>
-    <input checked id="allComments" name="filter" type="radio" value="">
-    <label for="allComments">Alle Kommentare</label>
-    </br>
-    <input id="solvedComments" name="filter" type="radio" value="solved">
-    <label for="solvedComments">Erledigte Kommentare</label>
-    </br>
-    <input id="unsolvedComments" name="filter" type="radio" value="unsolved">
-    <label for="unsolvedComments">Unerledigte Kommentare</label>
-    <h2>Kommentarseite:</h2>
-    <table>
-        <tr>
-            <td>
-                <div>
-                    <input checked id="allPages" name="pageFilter" style="margin-top: 1px;" type="radio"
-                           value="allPages">
-                    <label for="allPages">Alle Seiten</label>
-                </div>
-            </td>
-            <td>
-                <input id="certainPages" name="pageFilter" style="margin-top: 1px;" type="radio" value="allPages">
-                <label for="certainPages">Bestimmte Seiten</label>
-            </td>
-            <td>
-                <input class="textField" id="certainPagesCriteria" pattern="^[0-9][-|,]{0,}" placeholder="1,3,6-8"
-                       style=" margin-top: 0; position: unset; min-width: 100px; width: 10%;" type="text" value="1"/>
-            </td>
-        </tr>
-    </table>
+    <div style="margin-left: 10px;">
+        <h2>Kommentarstatus:</h2>
+        <input checked id="allComments" name="filter" type="radio" value="">
+        <label for="allComments">Alle Kommentare</label>
+        </br>
+        <input id="solvedComments" name="filter" type="radio" value="solved">
+        <label for="solvedComments">Erledigte Kommentare</label>
+        </br>
+        <input id="unsolvedComments" name="filter" type="radio" value="unsolved">
+        <label for="unsolvedComments">Unerledigte Kommentare</label>
+        <h2>Kommentarseite:</h2>
+        <table>
+            <tr>
+                <td>
+                    <div>
+                        <input checked id="allPages" name="pageFilter" style="margin-top: 1px;" type="radio"
+                               value="allPages">
+                        <label for="allPages">Alle Seiten</label>
+                    </div>
+                </td>
+                <td>
+                    <input id="certainPages" name="pageFilter" style="margin-top: 1px;" type="radio" value="allPages">
+                    <label for="certainPages">Bestimmte Seiten</label>
+                </td>
+                <td>
+                    <input class="textField" id="certainPagesCriteria" pattern="^[0-9][-|,]{0,}" placeholder="1,3,6-8"
+                           style=" margin-top: 0; position: unset; min-width: 100px; width: 10%;" type="text"
+                           value="1"/>
+                </td>
+            </tr>
+        </table>
+    </div>
 </div>
 <div class="toolbox" id="changeCommentContainer"
      style="top: 15%; width: 28%; height: 63%; min-height: 60%; left: 1%;outline-style:none;box-shadow:none;border-color:transparent; padding-right: 15px;">
     <div id="filterContainer" style="margin-left: 10px;">
         <table>
-            <tr>
+            <colgroup>
+                <col style=""/>
+                <col style="width: 5%;"/>
+            </colgroup>
+            <tr style="width: 100%;">
                 <td>
                     <label for="searchComments"></label>
                     <input class="textField" id="searchComments" placeholder="Search here."
-                           style="width: 18%; top: 16%;"
+                           style="position: relative; width: 100%;  text-align: left;"
                            type="text"/>
                 </td>
-                <td style="width: 80%"></td>
                 <td>
                     <button id="filterSettingsBtn"
                             style="font-size: 15px; height: 100%; white-space: normal; word-wrap: break-word;">
-                        Versionsfilter
+                        Filter
                     </button>
                 </td>
             </tr>
@@ -104,26 +110,54 @@
     <div id="textCommentContainer"
          style="height: 89%; width: 99%; overflow-x: hidden; overflow-y: scroll; margin-top: 10px;">
         <div id="blueprintTextComment"
-             style="position: absolute; display: none; margin: 5px 15px 10px 10px; background-color: dimgrey; grid-template-columns: 90% 10%;">
-            <div id="cIContainer" style="margin-left: 10px;">
-                <p align="left" id="commentIText" style="">Idk... Just change it. <br> dsadadas s <br> lorem...</p>
-                <table>
-                    <tr>
-                        <td>geschrieben von</td>
-                        <td>
-                            <a href="mailto:email?subject=Kommentar%20im%20Designvorschlag"
-                               id="commentIAuthor" style="color: white;">email@thingymagics.com</a>
-                        </td>
-                        <td>
-                            <p id="commentIVersion" style="margin-left:auto; margin-right:0;">Some Version.</p>
-                        </td>
-                    </tr>
-                </table>
-                <div id="commentIFinder" style="height: 10px; z-index: 3; margin-bottom: 5px;"></div>
-            </div>
-            <label style="margin-left: 5px; margin-right: 5px; margin-top: 85%;">
-                <input id="commentIImplemented" type="checkbox"/>
-            </label>
+             style="position: absolute; display: none; margin: 5px 15px 10px 10px; background-color: dimgrey; border: 2px solid dimgrey; border-radius: 25px;">
+            <table style="width: 100%;">
+                <tr>
+                    <td>
+                        <div id="cIContainer" style="width: 100%; min-width: 100%;">
+                            <table style="width: 100%; height: 15px;">
+                                <tr>
+                                    <td>
+                                        <p align="left" id="commentIText"
+                                           style="margin-left: 10px; margin-right: 10px;">Idk... Just change it. <br>
+                                            dsadadas
+                                            s <br> lorem...</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="width: 80%;">
+                                        <p align="left" style="margin-left: 10px; margin-right: 10px;">
+                                            geschrieben von
+                                            <a href="mailto:email?subject=Kommentar%20im%20Designvorschlag"
+                                               id="commentIAuthor"
+                                               style="color: white;">email@thingymagics.com</a>
+                                        </p>
+                                    </td>
+                                    <td>
+                                        <p id="commentIVersion" style="float: right; margin-left:auto; margin-right:0;">
+                                            Some Version.</p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </td>
+                    <td>
+                        <div>
+                            <label for="commentIImplemented"></label>
+                            <input id="commentIImplemented"
+                                   style="width: 15px; height: 15px; float: right;
+                                                margin-top: calc(70% - 8px);"
+                                   type="checkbox"/>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div id="commentIFinder"
+                             style="height: 10px; z-index: 3; margin-bottom: 15px; border-radius: 5px; margin-left: 10px; margin-right: 10px;"></div>
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
