updated the link form VersionOverview.html to Dashboard

--- a/app/VersionOverview.html
+++ b/app/VersionOverview.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="topimg">
-    <a href="../app/CustumorDashboard.html">Zur&uuml;ck</a>
+    <a href="../app/">Zur&uuml;ck</a>
     <img alt="tick" height="100" src="https://cdn-design-revision.netlify.com/files/img/logo.png"
          style="float: left"
          width="100">
