--- a/old-files/loginNewAccount.html
+++ b/old-files/loginNewAccount.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="form">
-    <form action="signup.php" id="newAccountForm" method="post">
+    <form action="../login/signup.php" id="newAccountForm" method="post">
         <h1>Erstellen sie ein Konto</h1>
         <div class="name">
             <label>
@@ -51,7 +51,7 @@
         <br><br>
         <input id="btnSignIn" name="btnSignIn" type="submit" value="Registrieren">
     </form>
-    <p>Sie haben schon ein Konto? <a href="../login/">Anmelden</a></p>
+    <p>Sie haben schon ein Konto? <a href="../login">Anmelden</a></p>
 </div>
 </body>
 <script>
