--- a/old-files/verifizieren.html
+++ b/old-files/verifizieren.html
@@ -12,7 +12,7 @@
 <h1 style="font-size:48px">Sie haben sich erfolglreich registiriert</h1>
 <p style="font-size:24px"> Wir haben ihnen eine E-Mail zugesendet in der sie sich verifizieren müssen</p>
 <p style="font-size:24px">Sie haben sich bereits verifiziert?</p>
-<a href="../login/"
+<a href="../login"
    style="background-color: #0cfad6 ;color: black;font-size: 30px; padding: 15px 30px;margin: 20px;text-decoration:none;cursor: pointer">Zum Login</a>
 </center>
 </body>
