projektstatus update on btn click

--- a/old-files/CommentDesign.html
+++ b/old-files/CommentDesign.html
@@ -202,6 +202,7 @@
             alt="Comment" class="icon" src="https://cdn-design-revision.netlify.app/files/img/addComment.png"/></button>
 
 </div>
+<button id="sendBack" style="position: absolute; top: 84%; display: none;">Send back!</button>
 <div class="lowerBar" style="outline-style:none;box-shadow:none;border-color:transparent;">
     <button class="button" id="decPage" style="left: 40%;">-</button>
     <label>
