minor fixes and corrections

--- a/old-files/ViewDesign.html
+++ b/old-files/ViewDesign.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Editor - DesignRevision</title>
+    <title>Projekt-Ansicht - DesignRevision</title>
     <link href="https://cdn-design-revision.netlify.app/files/img/favicon.ico" rel="icon" type="image/x-icon">
     <link href="../files/css/Viewport.css" rel="stylesheet">
     <link href="../files/css/ViewDesign.css" rel="stylesheet">
