changed spelling plus html lang

--- a/old-files/CustumorDashboard.html
+++ b/old-files/CustumorDashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -65,7 +65,7 @@
                type="button"
                value="Member ausw&#228;hlen"/><br>
         <input id="submitButton" type="submit" value="Speichern">
-        <b id="loeschen">Kunde löschen</b>
+        <b id="loeschen">Projekt löschen</b>
         <div id="loader"><span id="percentage" style="display: none"></span></div>
     </form>
 </div>
